--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/bottom-tabs": "5.11.10",
+    "@react-navigation/material-top-tabs": "5.3.15",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.4",
     "lottie-ios": "3.1.8",
@@ -23,7 +24,8 @@
     "react-native-reanimated": "2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "1.1.1",
-    "react-native-screens": "3.1.1"
+    "react-native-screens": "3.1.1",
+    "react-native-tab-view": "2.16.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.16",
