--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.11",
+    "@react-native-seoul/masonry-list": "1.0.4",
     "@react-navigation/bottom-tabs": "5.11.10",
     "@react-navigation/material-top-tabs": "5.3.15",
     "@react-navigation/native": "5.9.4",
