--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "1.1.1",
     "react-native-screens": "3.1.1",
-    "react-native-tab-view": "2.16.0"
+    "react-native-tab-view": "2.16.0",
+    "react-native-vector-icons": "8.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.16",
