--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "0.5.8",
     "@react-native-community/masked-view": "0.1.11",
     "@react-native-seoul/masonry-list": "1.0.4",
     "@react-navigation/bottom-tabs": "5.11.10",
