--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-safe-area-view": "1.1.1",
     "react-native-screens": "3.1.1",
     "react-native-tab-view": "2.16.0",
-    "react-native-vector-icons": "8.1.0"
+    "react-native-vector-icons": "8.1.0",
+    "reanimated-bottom-sheet": "1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "7.13.16",
