--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "1.2.0",
     "@react-native-community/checkbox": "0.5.8",
     "@react-native-community/masked-view": "0.1.11",
     "@react-native-seoul/masonry-list": "1.0.4",
@@ -25,6 +26,7 @@
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-picker": "4.0.6",
     "react-native-linear-gradient": "2.5.6",
+    "react-native-pie": "1.1.2",
     "react-native-reanimated": "2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "1.1.1",
